@@ -4,9 +4,15 @@ import org.springframework.security.core.GrantedAuthority;
 import org.springframework.util.Assert;
 
 import java.util.Collection;
+import java.util.Collections;
 import java.util.Set;
 
+import static it.pagopa.selfcare.commons.base.security.Authority.ADMIN_REF;
+import static it.pagopa.selfcare.commons.base.security.Authority.TECH_REF;
+
 public class SelfCareGrantedAuthority implements GrantedAuthority {
+
+    public static final Set<String> PRODUCTS_BASED_AUTHORITIES = Set.of(TECH_REF.name(), ADMIN_REF.name());
 
     private final String role;
     private final Set<String> products;
@@ -20,9 +26,15 @@ public class SelfCareGrantedAuthority implements GrantedAuthority {
     public SelfCareGrantedAuthority(String role, Collection<String> products) {
         Assert.hasText(role, "A granted authority textual representation is required");
         this.role = role;
-        this.products = products != null
-                ? Set.copyOf(products)
-                : null;
+        if (PRODUCTS_BASED_AUTHORITIES.contains(role)) {
+            if (products == null) {
+                this.products = Collections.emptySet();
+            } else {
+                this.products = Set.copyOf(products);
+            }
+        } else {
+            this.products = null;
+        }
     }
 
 
